# gold-tier-hackathon-0

./: .gitignore  CLAUDE.md  README.md  getXapi.md  gold-tier.md  hackathon.txt  prompts.txt  social-post-workflow.txt  test-odoo.py
.claude/: settings.local.json
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md  Plan.md  SKILLS.md
AI_Employee_Vault/Briefings/: 2026-02-20_CEO_Briefing.md  2026-02-20_Monday_Briefing.md
AI_Employee_Vault/Done/: DONE_APPROVAL_social_post_20260219_095228.md  DONE_APPROVAL_social_post_20260219_095908.md  Email_20260217_162952_19c6b58f.md  Email_20260217_162957_19c6b271.md  Email_20260217_164406_19c6b69f.md  Email_20260217_180237_19c6bb1e.md  Email_20260219_100256_19c74278.md  Email_20260219_100258_19c73f05.md  Email_20260219_100301_19c72f85.md  Email_20260219_100303_19c72afe.md  Email_20260219_100305_19c721e2.md  Task_20260219_093635.md  Task_20260219_095217.md  Task_20260219_095902.md  WH_20260218_112642.md  WH_20260219_093653.md  WH_20260219_095226.md  WH_20260219_095228.md  WH_20260219_095908.md  demo_test.md
AI_Employee_Vault/skills/: README.md  (+3 more)
ai-employee-watcher/: audit_logger.py  ceo_briefing.py  check.py  demo_bronze_tier.py  file_watcher.py  gemini_agent.py  gmail_mcp_server.py  gmail_watcher.py  linkedin_poster.py  linkedin_real.py  mock_watcher.py  odoo_mcp_server.py  orchestrator.py  plan_loop.py  pyproject.toml  ralph_wiggum.py  retry_handler.py  scheduled_task.py  skills.py  social_mcp_server.py  start_gold.py  start_silver.py  test_silver.py  test_skills.py  watchdog_monitor.py  whatsapp_server.py
(+45 files in other folders)
